[package]
name = "credenciales-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.49.0", features = ["full"] }
mongodb = "3.5.0"
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
moka = { version = "0.12", features = ["sync"] }
bcrypt = "0.15"
jsonwebtoken = "9"

[dev-dependencies]
serial_test = "3"